# regions_hp_electricity_demand_api

./: Dockerfile  pyproject.toml
regions_hp_electricity_demand_api/: crud.py  database.py  main.py  models.py  schemas.py
src/: crud.py  main.py  models.py  schemas.py  settings.py
