[tool.poetry]
name = "regions-hp-electricity-demand-api"
version = "0.1.0"
description = ""
authors = ["Ferenc Kleedoerfer <ferenc.kleedoerfer@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.9"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
